--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/itm_pp3?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
