--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/itm_pp3?verifyServerCerti
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
